@@ -6,23 +6,23 @@ import android.view.MotionEvent;
 import android.view.View;
 import android.view.View.OnTouchListener;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Deque;
+import java.util.LinkedList;
 
 public class DrawView extends View implements OnTouchListener {
     private static final String TAG = "DrawView";
 
-    private enum State {NONE, STARTED}
+    private enum State {DRAFT, COMPLETE_SHIP}
 
     private enum Direction {VERTICAL, HORIZONTAL}
 
-
-    private State state = State.NONE;
+    private State state = State.DRAFT;
     private Direction direction;
 
-    BattleMap battleMap = new BattleMap();
+    DrawBattleMap drawBattleMap = new DrawBattleMap();
+    BattleMap battleMap = new BattleMap(drawBattleMap);
     MotionEvent event;
-    List<Cell> cells = new ArrayList<Cell>();
+    Ship currentShip;
 
     public DrawView(Context context) {
         super(context);
@@ -35,153 +35,121 @@ public class DrawView extends View implements OnTouchListener {
 
     @Override
     public void onDraw(Canvas canvas) {
-        battleMap.draw(canvas);
+        drawBattleMap.draw(canvas);
         if (event != null) {
-            for (Cell c : cells) {
-                battleMap.drawDraftCell(c);
+            if (state == State.DRAFT) {
+                battleMap.addDraftShip(currentShip);
+            } else {
+                battleMap.addShip(currentShip);
+                state = State.DRAFT;
             }
         }
     }
 
     public boolean onTouch(View view, MotionEvent event) {
 
-        Cell cell;
+        int action = event.getAction();
 
-        switch (event.getAction()) {
-            case MotionEvent.ACTION_DOWN:
+        if (action == MotionEvent.ACTION_DOWN || action == MotionEvent.ACTION_MOVE) {
+            Cell cell = drawBattleMap.recognizeCell(event.getX(), event.getY());
+            if (cell == null) {
+                return false;
+            }
 
-                cell = battleMap.recognizeCell(event.getX(), event.getY());
-                if (cell == null) {
-                    return false;
-                }
-                cells.clear();
-                this.event = event;
-
-                cells.add(cell);
-                break;
-
-            case MotionEvent.ACTION_MOVE:
-
-                cell = battleMap.recognizeCell(event.getX(), event.getY());
-                if (cell == null) {
-                    return false;
-                }
-                int size = cells.size();
-
-                if (cell.equals(cells.get(size - 1))) {
+            Ship ship;
+            if (action == MotionEvent.ACTION_DOWN) {
+                ship = new Ship(cell);
+            } else {
+                Cell last = currentShip.getCells().getLast();
+                if (cell.equals(last)) {
                     return false;
                 }
 
-
-                if (size == 1) {
+                if (direction == null) {
                     direction = recognizeDirection(cell);
                     if (direction == null) {
                         return false;
                     }
-
-                    this.event = event;
-                    cells.add(cell);
-
-                } else if (isValidDirectionNewCell(cell)) {
-
-                    if (direction == Direction.VERTICAL) {
-                        if (Math.abs((cells.get(0).y - cells.get(size - 1).y)) < Math.abs((cells.get(0).y - cell.y))) {
-                            cells.add(cell);
-                        } else {
-                            cells.remove(size - 1);
-                        }
-                    }
-
-                    if (direction == Direction.HORIZONTAL) {
-                        if (Math.abs((cells.get(0).x - cells.get(size - 1).x)) < Math.abs((cells.get(0).x - cell.x))) {
-                            cells.add(cell);
-                        } else {
-                            cells.remove(size - 1);
-                        }
-                    }
-                    this.event = event;
-
-
-                } else {
-
-                    Cell c = recognizeMissCell(cell);
-                    if (c.equals(cells.get(size - 1))) {
-                        return false;
-                    }
-                    this.event = event;
-                    if (direction == Direction.VERTICAL) {
-                        if (Math.abs((cells.get(0).y - cells.get(size - 1).y)) < Math.abs((cells.get(0).y - c.y))) {
-                            cells.add(c);
-                        } else {
-                            cells.remove(size - 1);
-                        }
-                    }
-
-                    if (direction == Direction.HORIZONTAL) {
-                        if (Math.abs((cells.get(0).x - cells.get(size - 1).x)) < Math.abs((cells.get(0).x - c.x))) {
-                            cells.add(c);
-                        } else {
-                            cells.remove(size - 1);
-                        }
-                    }
-
-
                 }
+                ship = recognizeShip(cell);
+            }
 
-
-                break;
-            case MotionEvent.ACTION_UP:
-                direction = null;
+            if (!battleMap.possibleAddShip(ship)) {
                 return false;
+            }
 
-            default:
-                return false;
+            currentShip = ship;
+
+        } else if (action == MotionEvent.ACTION_UP) {
+            direction = null;
+            state = State.COMPLETE_SHIP;
         }
 
-
+        this.event = event;
         invalidate();
+
         return true;
     }
 
-    private boolean hasCell(Cell cell) {
-        for (Cell c : cells) {
-            if (c.x == cell.x && c.y == cell.y) return true;
+    public Ship recognizeShip(Cell lastCell) {
+        if (direction.equals(Direction.HORIZONTAL)) {
+            return horizontalShip(lastCell);
+        } else {
+            return verticalShip(lastCell);
         }
-
-        return false;
     }
 
 
-    private boolean isValidDirectionNewCell(Cell cell) {
-        int size = cells.size();
+    private Ship horizontalShip(Cell cell) {
+        Deque<Cell> cells = new LinkedList<Cell>();
+        Cell firstCell = currentShip.getCells().getFirst();
 
-        if (size < 2) return true;
+        if (firstCell.y != cell.y) {
+            cell.y = firstCell.y;
+        }
 
-        return (cells.get(size - 1).x == cell.x && direction == Direction.VERTICAL) ||
-                (cells.get(size - 1).y == cell.y && direction == Direction.HORIZONTAL);
+        if (firstCell.x < cell.x) {
+            for (int x = firstCell.x; x <= cell.x; x++) {
+                cells.add(new Cell(x, cell.y));
+            }
+        } else {
+            for (int x = firstCell.x; x >= cell.x; x--) {
+                cells.add(new Cell(x, cell.y));
+            }
+        }
+
+        return new Ship(cells);
+    }
+
+    private Ship verticalShip(Cell cell) {
+        Deque<Cell> cells = new LinkedList<Cell>();
+        Cell firstCell = currentShip.getCells().getFirst();
+
+        if (firstCell.x != cell.x) {
+            cell.x = firstCell.x;
+        }
+
+        if (firstCell.y < cell.y) {
+            for (int y = firstCell.y; y <= cell.y; y++) {
+                cells.add(new Cell(cell.x, y));
+            }
+        } else {
+            for (int y = firstCell.y; y >= cell.y; y--) {
+                cells.add(new Cell(cell.x, y));
+            }
+        }
+
+        return new Ship(cells);
     }
 
     private Direction recognizeDirection(Cell cell) {
 
-        if (cells.get(0).x == cell.x) {
+        if (currentShip.getCells().getFirst().x == cell.x) {
             return Direction.VERTICAL;
-        } else if (cells.get(0).y == cell.y) {
+        } else if (currentShip.getCells().getFirst().y == cell.y) {
             return Direction.HORIZONTAL;
         } else {
             return null;
         }
-    }
-
-
-    private Cell recognizeMissCell(Cell cell) {
-        Cell result;
-
-        if (direction == Direction.VERTICAL) {
-            result = new Cell(cells.get(cells.size() - 1).x, cell.y);
-        } else {
-            result = new Cell(cell.x, cells.get(cells.size() - 1).y);
-        }
-
-        return result;
     }
 }
